# Gaussian-fPEPS

./: .gitignore  LICENSE  LICENSE.txt  Makefile  README.md  example.jl  gfpeps_app.py  pyproject.toml  run.sh  trans.sh  translate.py
conf/: config.yaml
conf/gfpeps/: Nv1FF.yaml  Nv2FF.yaml  default.yaml
fgpeps/: ABD.py  GaussianLinearMap.py  Gin.py  __init__.py  args.py  exact.py  main.py
gfpeps/: ABD.py  __init__.py  loss.py
input/: annealingGAPjobs.jl  annealingjobL.jl  annealingjobs.jl  batchheissianjobs.jl  batchjobs.jl  findseed.jl  submit.jl
interface/: fgpeps.jl
jobs/: AnealingABDNv1.pbs  AnealingABDNv1C-1.pbs  AnealingABDNv1C-10.pbs  AnealingABDNv1C-11.pbs  AnealingABDNv1C-12.pbs  AnealingABDNv1C-13.pbs  AnealingABDNv1C-14.pbs  AnealingABDNv1C-15.pbs  AnealingABDNv1C-16.pbs  AnealingABDNv1C-17.pbs  AnealingABDNv1C-18.pbs  AnealingABDNv1C-19.pbs  AnealingABDNv1C-2.pbs  AnealingABDNv1C-20.pbs  AnealingABDNv1C-3.pbs  AnealingABDNv1C-4.pbs  AnealingABDNv1C-5.pbs  AnealingABDNv1C-6.pbs  AnealingABDNv1C-7.pbs  AnealingABDNv1C-8.pbs  AnealingABDNv1C-9.pbs  AnealingABDNv1C0.pbs  AnealingABDNv1C1.pbs  AnealingABDNv1C10.pbs  AnealingABDNv1C11.pbs  AnealingABDNv1C12.pbs  AnealingABDNv1C13.pbs  AnealingABDNv1C14.pbs  AnealingABDNv1C15.pbs  AnealingABDNv1C16.pbs  AnealingABDNv1C17.pbs  AnealingABDNv1C18.pbs  AnealingABDNv1C19.pbs  AnealingABDNv1C2.pbs  AnealingABDNv1C20.pbs  AnealingABDNv1C3.pbs  AnealingABDNv1C4.pbs  AnealingABDNv1C5.pbs  AnealingABDNv1C6.pbs  AnealingABDNv1C7.pbs  (+4 more)
result/: Nv1C999.h5  Nv2C999.h5  Nv3C999.h5
src/: ABD.py  GaussianLinearMap.py  Gin.py  args.py  deltatomu.py  exact.py  loadwrite.py  loss.py  main.py  mainhessian.py  manopt.py  recoverEABD.py
src/gaussian_fpeps/: loadwrite.py
src/gfpeps/: GaussianLinearMap.py  __about__.py  __init__.py  deltatomu.py  exact.py  gaussian_fpeps.py  loadwrite.py  loss.py  main.py  measure.py
tests/: __init__.py
